--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.245" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_home"
         android:layout_width="521dp"
         android:layout_height="115dp"
         android:fontFamily="sans-serif"
