--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -22,7 +22,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/inputPatientAge" />
 
     <ImageView
         android:id="@+id/imageView15"
@@ -35,7 +35,7 @@
         app:srcCompat="@drawable/bar" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/labelPatientIdentifier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -46,8 +46,8 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.982"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintStart_toEndOf="@+id/labelPatientAge"
+        app:layout_constraintTop_toBottomOf="@+id/inputPatientName"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -78,21 +78,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <EditText
-        android:id="@+id/editTextText3"
-        android:layout_width="634dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:fontFamily="sans-serif-light"
-        android:hint="Digite o nome do profissional"
-        android:inputType="text"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
@@ -105,7 +90,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/inputProfessionalName" />
 
     <TextView
         android:id="@+id/textView10"
@@ -119,7 +104,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.725"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/inputProfessionalName" />
 
     <EditText
         android:id="@+id/editTextNumber4"
@@ -136,12 +121,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/labelProfissionalName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-light"
-        android:text="Nome do profissional:"
+        android:text="Nome do profissional:*"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -164,12 +149,12 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/labelPatientName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-light"
-        android:text="Nome do paciente:"
+        android:text="Nome do paciente:*"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -178,19 +163,19 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView14" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/labelPatientAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-light"
-        android:text="Idade:"
+        android:text="Idade:*"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/inputPatientName" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/inputPatientName"
         android:layout_width="634dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -202,10 +187,25 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/labelPatientName" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/inputProfessionalName"
+        android:layout_width="641dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Digite o nome do paciente"
+        android:inputType="text"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/labelProfissionalName" />
+
+    <EditText
+        android:id="@+id/inputPatientAge"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -215,13 +215,13 @@
         android:inputType="number"
         android:maxLength="3"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
+        app:layout_constraintEnd_toStartOf="@+id/inputPatientIdentifier"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/labelPatientAge" />
 
     <EditText
-        android:id="@+id/editTextNumber3"
+        android:id="@+id/inputPatientIdentifier"
         android:layout_width="350dp"
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
@@ -232,10 +232,10 @@
         android:maxLength="11"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/labelPatientIdentifier" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonConfirm"
         android:layout_width="251dp"
         android:layout_height="67dp"
         android:layout_marginEnd="36dp"
@@ -248,7 +248,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonBackMain"
         android:layout_width="251dp"
         android:layout_height="67dp"
         android:layout_marginStart="36dp"
@@ -258,7 +258,7 @@
         android:text="Cancelar"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/buttonConfirm"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
