--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,29 +10,45 @@
 
     <TextView
         android:id="@+id/tmt_title"
-        android:layout_width="554dp"
-        android:layout_height="518dp"
+        android:layout_width="0sp"
+        android:layout_height="518sp"
         android:fontFamily="sans-serif-light"
         android:text="Trial Making Test"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="130sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.245" />
 
     <Button
         android:id="@+id/btn_home"
-        android:layout_width="521dp"
-        android:layout_height="115dp"
+        android:layout_width="521sp"
+        android:layout_height="115sp"
         android:fontFamily="sans-serif"
         android:text="Iniciar"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guideline5"
         app:layout_constraintTop_toBottomOf="@+id/tmt_title"
-        app:layout_constraintVertical_bias="0.489" />
+        app:layout_constraintVertical_bias="0.486" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.90875" />
 </androidx.constraintlayout.widget.ConstraintLayout>
