--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -12,9 +12,9 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="259dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="259sp"
+        android:layout_height="46sp"
+        android:layout_marginTop="70sp"
         android:fontFamily="sans-serif-light"
         android:text="Profissional"
         android:textColor="@color/black"
@@ -26,8 +26,8 @@
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="638dp"
-        android:layout_height="13dp"
+        android:layout_width="638sp"
+        android:layout_height="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
@@ -52,23 +52,24 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="428dp"
-        android:layout_height="121dp"
+        android:layout_width="0sp"
+        android:layout_height="121sp"
         android:layout_marginTop="76dp"
         android:fontFamily="sans-serif-light"
         android:text="Informações"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="70sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="152dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="152sp"
+        android:layout_height="46sp"
+        android:layout_marginTop="8sp"
         android:fontFamily="sans-serif-light"
         android:text="Paciente"
         android:textColor="@color/black"
@@ -82,7 +83,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="24sp"
         android:fontFamily="sans-serif-light"
         android:text="Identificador:"
         android:textColor="@color/black"
@@ -96,7 +97,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="24sp"
         android:fontFamily="sans-serif-light"
         android:text="Data"
         android:textColor="@color/black"
@@ -108,9 +109,9 @@
 
     <EditText
         android:id="@+id/editTextNumber4"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="350sp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite o identificador (CPF/Matrícula)"
@@ -124,7 +125,7 @@
         android:id="@+id/labelProfissionalName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="24sp"
         android:fontFamily="sans-serif-light"
         android:text="Nome do profissional:*"
         android:textColor="@color/black"
@@ -152,7 +153,7 @@
         android:id="@+id/labelPatientName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="24sp"
         android:fontFamily="sans-serif-light"
         android:text="Nome do paciente:*"
         android:textColor="@color/black"
@@ -166,7 +167,7 @@
         android:id="@+id/labelPatientAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="24sp"
         android:fontFamily="sans-serif-light"
         android:text="Idade:*"
         android:textColor="@color/black"
@@ -176,8 +177,8 @@
 
     <EditText
         android:id="@+id/inputPatientName"
-        android:layout_width="634dp"
-        android:layout_height="48dp"
+        android:layout_width="0sp"
+        android:layout_height="48sp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
@@ -191,9 +192,9 @@
 
     <EditText
         android:id="@+id/inputProfessionalName"
-        android:layout_width="641dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="641sp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite o nome do paciente"
@@ -207,8 +208,8 @@
     <EditText
         android:id="@+id/inputPatientAge"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite a idade"
@@ -222,9 +223,9 @@
 
     <EditText
         android:id="@+id/inputPatientIdentifier"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="350sp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite o identificador (CPF/Matrícula)"
@@ -236,10 +237,10 @@
 
     <Button
         android:id="@+id/buttonConfirm"
-        android:layout_width="251dp"
-        android:layout_height="67dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="251sp"
+        android:layout_height="67sp"
+        android:layout_marginEnd="36sp"
+        android:layout_marginBottom="124sp"
         android:text="Continuar"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -249,11 +250,11 @@
 
     <Button
         android:id="@+id/buttonBackMain"
-        android:layout_width="251dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="251sp"
+        android:layout_height="67sp"
+        android:layout_marginStart="36sp"
+        android:layout_marginEnd="66sp"
+        android:layout_marginBottom="124sp"
         android:backgroundTint="#CE4336"
         android:text="Cancelar"
         android:textSize="24sp"
@@ -267,8 +268,8 @@
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="638dp"
-        android:layout_height="13dp"
+        android:layout_width="638sp"
+        android:layout_height="13sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
@@ -278,8 +279,8 @@
     <EditText
         android:id="@+id/editTextDate2"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
         android:drawableLeft="@android:drawable/ic_menu_my_calendar"
         android:drawablePadding="8dp"
         android:ems="10"
