--- a/app/src/main/res/layout/activity_tmtainformation.xml
+++ b/app/src/main/res/layout/activity_tmtainformation.xml
@@ -9,10 +9,10 @@
 
     <Button
         android:id="@+id/buttonBackInformation"
-        android:layout_width="251dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="251sp"
+        android:layout_height="67sp"
+        android:layout_marginStart="36sp"
+        android:layout_marginBottom="124sp"
         android:backgroundTint="#CE4336"
         android:text="Cancelar"
         android:textSize="24sp"
@@ -22,10 +22,10 @@
 
     <Button
         android:id="@+id/buttonSampleA"
-        android:layout_width="251dp"
-        android:layout_height="67dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="251sp"
+        android:layout_height="67sp"
+        android:layout_marginEnd="36sp"
+        android:layout_marginBottom="124sp"
         android:text="Iniciar exemplo"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,23 +35,24 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="638dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="76dp"
+        android:layout_width="0sp"
+        android:layout_height="91sp"
+        android:layout_marginTop="76sp"
         android:fontFamily="sans-serif-light"
         android:text="Sobre o TMT-A"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="70sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="68sp"
         android:fontFamily="sans-serif-light"
         android:text="@string/about_tmta"
         android:textSize="24sp"
@@ -62,9 +63,9 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="16sp"
         android:fontFamily="sans-serif-light"
         android:text="@string/about_tmta_part2"
         android:textSize="24sp"
@@ -89,9 +90,9 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="16sp"
         android:fontFamily="sans-serif-light"
         android:text="@string/about_tmta_part3"
         android:textSize="24sp"
