--- a/app/src/main/res/layout/activity_tmtbinformation.xml
+++ b/app/src/main/res/layout/activity_tmtbinformation.xml
@@ -9,10 +9,10 @@
 
     <Button
         android:id="@+id/buttonSampleB"
-        android:layout_width="251dp"
-        android:layout_height="67dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="251sp"
+        android:layout_height="67sp"
+        android:layout_marginEnd="36sp"
+        android:layout_marginBottom="124sp"
         android:text="Iniciar exemplo"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,10 +22,10 @@
 
     <Button
         android:id="@+id/buttonBackHome"
-        android:layout_width="251dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="251sp"
+        android:layout_height="67sp"
+        android:layout_marginStart="36sp"
+        android:layout_marginBottom="124sp"
         android:backgroundTint="#CE4336"
         android:text="Cancelar"
         android:textSize="24sp"
@@ -49,23 +49,23 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="638dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="76dp"
+        android:layout_width="0sp"
+        android:layout_height="91sp"
+        android:layout_marginTop="76sp"
         android:fontFamily="sans-serif-light"
         android:text="Sobre TMT-B"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="70sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline8"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="68sp"
         android:fontFamily="sans-serif-light"
         android:text="@string/about_tmtb"
         android:textSize="24sp"
@@ -76,9 +76,9 @@
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="16sp"
         android:fontFamily="sans-serif-light"
         android:text="@string/about_tmtb_part2"
         android:textSize="24sp"
@@ -89,9 +89,9 @@
 
     <TextView
         android:id="@+id/textView15"
-        android:layout_width="0dp"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="16sp"
         android:fontFamily="sans-serif-light"
         android:text="@string/about_tmtb_part3"
         android:textSize="24sp"
