--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,10 +27,12 @@
     <Button
         android:id="@+id/btn_home"
         android:layout_width="521sp"
-        android:layout_height="115sp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
+        android:paddingTop="10sp"
+        android:paddingBottom="10sp"
         android:text="Iniciar"
-        android:textSize="60sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="0.5"
