Integração das telas, salvar resultados da sessão e outros ajustes.

--- a/app/src/main/res/layout/activity_tmtainformation.xml
+++ b/app/src/main/res/layout/activity_tmtainformation.xml
@@ -26,7 +26,7 @@
         android:layout_height="67sp"
         android:layout_marginEnd="36sp"
         android:layout_marginBottom="124sp"
-        android:text="Iniciar exemplo"
+        android:text="@string/start_sample"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -39,7 +39,7 @@
         android:layout_height="91sp"
         android:layout_marginTop="76sp"
         android:fontFamily="sans-serif-light"
-        android:text="Sobre o TMT-A"
+        android:text="@string/about_tmt_a"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="70sp"
