--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -10,45 +10,19 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="0dp">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="259sp"
-        android:layout_height="46sp"
-        android:layout_marginTop="70sp"
-        android:fontFamily="sans-serif-light"
-        android:text="Profissional"
-        android:textColor="@color/black"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/inputPatientAge" />
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="638sp"
-        android:layout_height="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:srcCompat="@drawable/bar" />
-
-    <TextView
-        android:id="@+id/labelPatientIdentifier"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="212dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Identificador:"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.982"
-        app:layout_constraintStart_toEndOf="@+id/labelPatientAge"
-        app:layout_constraintTop_toBottomOf="@+id/inputPatientName"
-        tools:ignore="HardcodedText" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9" />
 
     <TextView
         android:id="@+id/textView"
@@ -78,6 +52,159 @@
         app:layout_constraintHorizontal_bias="0.124"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="638sp"
+        android:layout_height="13sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:srcCompat="@drawable/bar" />
+
+    <TextView
+        android:id="@+id/labelPatientName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24sp"
+        android:fontFamily="sans-serif-light"
+        android:text="Nome do paciente:*"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.002"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+
+    <EditText
+        android:id="@+id/inputPatientName"
+        android:layout_width="0sp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12dp"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Digite o nome do paciente"
+        android:inputType="text"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/labelPatientName" />
+
+    <TextView
+        android:id="@+id/labelPatientAge"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Idade:*"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/labelPatientIdentifier"
+        app:layout_constraintTop_toBottomOf="@+id/inputPatientName"
+        app:layout_constraintHorizontal_weight="1"/>
+
+    <TextView
+        android:id="@+id/labelPatientIdentifier"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Identificador:"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/labelPatientAge"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/inputPatientName"
+        app:layout_constraintHorizontal_weight="2"
+        tools:ignore="HardcodedText" />
+
+    <EditText
+        android:id="@+id/inputPatientAge"
+        android:layout_width="0dp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Digite a idade"
+        android:inputType="number"
+        android:maxLength="3"
+        android:textSize="20sp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/inputPatientIdentifier"
+        app:layout_constraintTop_toBottomOf="@+id/labelPatientAge"
+        app:layout_constraintHorizontal_weight="1"/>
+
+    <EditText
+        android:id="@+id/inputPatientIdentifier"
+        android:layout_width="0dp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Digite o identificador (CPF/Matrícula)"
+        android:inputType="number"
+        android:maxLength="11"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/inputPatientAge"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/labelPatientAge"
+        app:layout_constraintHorizontal_weight="2"/>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="259sp"
+        android:layout_height="46sp"
+        android:layout_marginTop="70sp"
+        android:fontFamily="sans-serif-light"
+        android:text="Profissional"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/inputPatientAge" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="638sp"
+        android:layout_height="13sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:srcCompat="@drawable/bar" />
+
+    <TextView
+        android:id="@+id/labelProfissionalName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24sp"
+        android:fontFamily="sans-serif-light"
+        android:text="Nome do profissional:*"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15" />
+
+    <EditText
+        android:id="@+id/inputProfessionalName"
+        android:layout_width="0dp"
+        android:layout_height="48sp"
+        android:layout_marginTop="12sp"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Digite o nome do paciente"
+        android:inputType="text"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/labelProfissionalName" />
 
     <TextView
         android:id="@+id/textView8"
@@ -121,119 +248,22 @@
         app:layout_constraintStart_toEndOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-    <TextView
-        android:id="@+id/labelProfissionalName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
-        android:fontFamily="sans-serif-light"
-        android:text="Nome do profissional:*"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/imageView15" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.9" />
-
-    <TextView
-        android:id="@+id/labelPatientName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
-        android:fontFamily="sans-serif-light"
-        android:text="Nome do paciente:*"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.002"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
-
-    <TextView
-        android:id="@+id/labelPatientAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
-        android:fontFamily="sans-serif-light"
-        android:text="Idade:*"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/inputPatientName" />
-
     <EditText
-        android:id="@+id/inputPatientName"
-        android:layout_width="0sp"
-        android:layout_height="48sp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:fontFamily="sans-serif-light"
-        android:hint="Digite o nome do paciente"
-        android:inputType="text"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/labelPatientName" />
-
-    <EditText
-        android:id="@+id/inputProfessionalName"
-        android:layout_width="641sp"
+        android:id="@+id/editTextDate2"
+        android:layout_width="wrap_content"
         android:layout_height="48sp"
         android:layout_marginTop="12sp"
+        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
+        android:drawablePadding="8dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
-        android:hint="Digite o nome do paciente"
-        android:inputType="text"
+        android:hint="Insira a data de hoje"
+        android:inputType="date"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/labelProfissionalName" />
-
-    <EditText
-        android:id="@+id/inputPatientAge"
-        android:layout_width="wrap_content"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
-        android:ems="10"
-        android:fontFamily="sans-serif-light"
-        android:hint="Digite a idade"
-        android:inputType="number"
-        android:maxLength="3"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/inputPatientIdentifier"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/labelPatientAge" />
-
-    <EditText
-        android:id="@+id/inputPatientIdentifier"
-        android:layout_width="350sp"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
-        android:ems="10"
-        android:fontFamily="sans-serif-light"
-        android:hint="Digite o identificador (CPF/Matrícula)"
-        android:inputType="number"
-        android:maxLength="11"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/labelPatientIdentifier" />
+        app:layout_constraintStart_toEndOf="@+id/inputProfessionalIdentifier"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <Button
         android:id="@+id/buttonConfirm"
@@ -265,32 +295,5 @@
         app:layout_constraintTop_toBottomOf="@+id/inputProfessionalIdentifier"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
-
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="638sp"
-        android:layout_height="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@drawable/bar" />
-
-    <EditText
-        android:id="@+id/editTextDate2"
-        android:layout_width="wrap_content"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
-        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
-        android:drawablePadding="8dp"
-        android:ems="10"
-        android:fontFamily="sans-serif-light"
-        android:hint="Insira a data de hoje"
-        android:inputType="date"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/inputProfessionalIdentifier"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
