--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--    <Button-->
+<!--        android:id="@+id/btn_next"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/next"-->
+<!--        android:layout_margin="16dp"-->
+<!--        android:visibility="gone" />-->
+
+    <!-- Área com fundo blur e botão fixo no fundo -->
+
     <com.example.tmt.DrawingView
         android:id="@+id/drawing_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:id="@+id/footerArea"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@drawable/blur_background"
+        android:elevation="8dp"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <Button
+            android:id="@+id/btnNext"
+            android:text="@string/next"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="24dp"
+            android:textSize="22sp"
+            android:elevation="8dp"
+            android:visibility="visible" />
+    </LinearLayout>
 
 </FrameLayout>
