Mudança de package, adiciona funcionalidade de tempo máximo e outros ajustes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
     <!-- Área com fundo blur e botão fixo no fundo -->
 
-    <com.example.tmt.DrawingView
+    <com.example.tmt.view.DrawingView
         android:id="@+id/drawing_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
