--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,15 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".controller.HomeActivity">
 
 
     <TextView
         android:id="@+id/tmt_title"
-        android:layout_width="0sp"
+        android:layout_width="0dp"
         android:layout_height="518sp"
         android:fontFamily="sans-serif-light"
-        android:text="Trail Making Test"
+        android:gravity="center"
+        android:text="TMTrilhas"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="130sp"
