--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InformationActivity"
+    tools:context=".controller.InformationActivity"
     tools:ignore="HardcodedText"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="0dp">
@@ -26,8 +26,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0sp"
-        android:layout_height="121sp"
+        android:layout_width="0dp"
+        android:layout_height="121dp"
         android:layout_marginTop="76dp"
         android:fontFamily="sans-serif-light"
         android:text="Informações"
@@ -41,9 +41,9 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="152sp"
-        android:layout_height="46sp"
-        android:layout_marginTop="8sp"
+        android:layout_width="180dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-light"
         android:text="Paciente"
         android:textColor="@color/black"
@@ -55,19 +55,19 @@
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="638sp"
-        android:layout_height="13sp"
+        android:layout_width="638dp"
+        android:layout_height="19dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@drawable/bar" />
+        android:src="@drawable/bar" />
 
     <TextView
         android:id="@+id/labelPatientName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-light"
         android:text="Nome do paciente:*"
         android:textColor="@color/black"
@@ -79,8 +79,8 @@
 
     <EditText
         android:id="@+id/inputPatientName"
-        android:layout_width="0sp"
-        android:layout_height="48sp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
@@ -124,8 +124,8 @@
     <EditText
         android:id="@+id/inputPatientAge"
         android:layout_width="0dp"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite a idade"
@@ -141,8 +141,8 @@
     <EditText
         android:id="@+id/inputPatientIdentifier"
         android:layout_width="0dp"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite o identificador (CPF/Matrícula)"
@@ -156,9 +156,9 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="259sp"
-        android:layout_height="46sp"
-        android:layout_marginTop="70sp"
+        android:layout_width="259dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="70dp"
         android:fontFamily="sans-serif-light"
         android:text="Profissional"
         android:textColor="@color/black"
@@ -170,8 +170,8 @@
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="638sp"
-        android:layout_height="13sp"
+        android:layout_width="638dp"
+        android:layout_height="13dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/guideline"
@@ -182,7 +182,7 @@
         android:id="@+id/labelProfissionalName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-light"
         android:text="Nome do profissional:*"
         android:textColor="@color/black"
@@ -195,8 +195,8 @@
     <EditText
         android:id="@+id/inputProfessionalName"
         android:layout_width="0dp"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite o nome do paciente"
@@ -210,7 +210,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-light"
         android:text="Identificador:"
         android:textColor="@color/black"
@@ -222,9 +222,9 @@
 
     <EditText
         android:id="@+id/inputProfessionalIdentifier"
-        android:layout_width="350sp"
-        android:layout_height="48sp"
-        android:layout_marginTop="12sp"
+        android:layout_width="370dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Digite o identificador (CPF/Matrícula)"
@@ -236,10 +236,10 @@
 
     <Button
         android:id="@+id/buttonConfirm"
-        android:layout_width="251sp"
-        android:layout_height="67sp"
-        android:layout_marginEnd="36sp"
-        android:layout_marginBottom="124sp"
+        android:layout_width="251dp"
+        android:layout_height="67dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="124dp"
         android:text="Continuar"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -249,11 +249,11 @@
 
     <Button
         android:id="@+id/buttonBackMain"
-        android:layout_width="251sp"
-        android:layout_height="67sp"
-        android:layout_marginStart="36sp"
-        android:layout_marginEnd="66sp"
-        android:layout_marginBottom="124sp"
+        android:layout_width="251dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="124dp"
         android:backgroundTint="#CE4336"
         android:text="Cancelar"
         android:textSize="24sp"
