--- a/app/src/main/res/layout/activity_tmtainformation.xml
+++ b/app/src/main/res/layout/activity_tmtainformation.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TMTAInformationActivity">
+    tools:context=".controller.TMTAInformationActivity">
 
     <Button
         android:id="@+id/buttonBackInformation"
@@ -49,30 +49,64 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewIntro"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="68sp"
         android:fontFamily="sans-serif-light"
-        android:text="@string/about_tmta"
+        android:text="@string/tmt_a_intro"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline4" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewObjective"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16sp"
         android:fontFamily="sans-serif-light"
-        android:text="@string/about_tmta_part2"
+        android:text="@string/tmt_a_objetivo"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/textViewIntro"
         app:layout_constraintStart_toEndOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline4" />
+
+    <TextView
+        android:id="@+id/textViewHowTo"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16sp"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/tmt_a_como_fazer"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewObjective"
+        app:layout_constraintStart_toEndOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4" />
+
+    <TextView
+        android:id="@+id/textViewStepByStep"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16sp"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/tmt_a_passo_a_passo"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHowTo"
+        app:layout_constraintStart_toEndOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4" />
+
+    <TextView
+        android:id="@+id/textViewExample"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16sp"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/tmt_a_exemplo"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewStepByStep"
+        app:layout_constraintStart_toEndOf="@+id/guideline3"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -88,16 +122,4 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.9" />
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="0sp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16sp"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/about_tmta_part3"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
